# bevy-ml

./: .gitignore  Cargo.toml
crates/core/: Cargo.toml
crates/core/src/: components.rs  lib.rs  plugin.rs  resources.rs  training.rs
crates/data/: Cargo.toml
crates/data/src/: dataset.rs  lib.rs  mnist.rs  plugin.rs
crates/nn/: Cargo.toml
crates/nn/src/: layer.rs  lib.rs  network.rs  plugin.rs
crates/optim/: Cargo.toml
crates/optim/src/: adam.rs  lib.rs  plugin.rs  sgd.rs
crates/tensor/: Cargo.toml
crates/tensor/src/: activations.rs  conv_ops.rs  init.rs  lib.rs  loss.rs  ops.rs  pool.rs
crates/tensor/tests/: grad_check.rs
crates/viz/: Cargo.toml
crates/viz/src/: charts.rs  dashboard.rs  lib.rs  plugin.rs  progress.rs  stats.rs
examples/: Cargo.toml  mnist_cnn.rs  mnist_mlp.rs
python/: compare.py  mnist_mlp.py
